// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Upload Product Question renders for invitee and guest when guest product questions enabled and they both have the associated product selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="fileUploadQuestionId-eventRegistration1_frame"
                    name="fileUploadQuestionId-eventRegistration1_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="fileUploadQuestionId-eventRegistration1_frame"
                  >
                    <label
                      for="fileUploadQuestionId-eventRegistration1_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="fileUploadQuestionId-eventRegistration1_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="fileUploadQuestionId-dummyGuestEventRegId_frame"
                    name="fileUploadQuestionId-dummyGuestEventRegId_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="fileUploadQuestionId-dummyGuestEventRegId_frame"
                  >
                    <label
                      for="fileUploadQuestionId-dummyGuestEventRegId_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="fileUploadQuestionId-dummyGuestEventRegId_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`File Upload Questions render on guest form 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    File Upload Question html
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="fileUploadQuestionId_frame"
                    name="fileUploadQuestionId_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="fileUploadQuestionId_frame"
                  >
                    <label
                      for="fileUploadQuestionId_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="fileUploadQuestionId_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`File Upload Questions renders 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    File Upload Question html
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="fileUploadQuestionId-eventRegistration1_frame"
                    name="fileUploadQuestionId-eventRegistration1_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="fileUploadQuestionId-eventRegistration1_frame"
                  >
                    <label
                      for="fileUploadQuestionId-eventRegistration1_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="fileUploadQuestionId-eventRegistration1_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="otherFileUploadQuestionId-eventRegistration1_frame"
                    name="otherFileUploadQuestionId-eventRegistration1_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="otherFileUploadQuestionId-eventRegistration1_frame"
                  >
                    <label
                      for="otherFileUploadQuestionId-eventRegistration1_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="otherFileUploadQuestionId-eventRegistration1_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`File Upload Session Question renders for invitee and guest when they both have the associated session selected 1`] = `
<div
  class=""
>
  <div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="sessionFileUploadQuestion3-eventRegistration1_frame"
                    name="sessionFileUploadQuestion3-eventRegistration1_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="sessionFileUploadQuestion3-eventRegistration1_frame"
                  >
                    <label
                      for="sessionFileUploadQuestion3-eventRegistration1_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="sessionFileUploadQuestion3-eventRegistration1_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      style="width: 100%;"
    >
      <div
        class=""
      >
        <div
          class=""
          data-cvent-id="upload-container"
          id="FileUploadForm"
          style="flex: 1 1 auto;"
        >
          <div
            class=""
          >
            EventWidgets_QuestionWidget_ProductQuestionHeader_TwoPartName
          </div>
          <div
            class=""
            data-cvent-id="upload-form-element"
          >
            <label
              class="labelOnTop"
              for="fileUpload"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span />
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              />
              <div
                class=""
                id="NucleusFileUpload"
              >
                <div
                  class=""
                >
                  <iframe
                    frameborder="0"
                    height="0"
                    id="sessionFileUploadQuestion3-dummyGuestEventRegId_frame"
                    name="sessionFileUploadQuestion3-dummyGuestEventRegId_frame"
                    src=""
                    style="position: absolute; border: 0px; height: 1px; width: 1px; margin: -1px; overflow: hidden; padding: 0px;"
                    width="0"
                  />
                  <form
                    action="uploadurl"
                    class=""
                    enctype="multipart/form-data"
                    method="post"
                    target="sessionFileUploadQuestion3-dummyGuestEventRegId_frame"
                  >
                    <label
                      for="sessionFileUploadQuestion3-dummyGuestEventRegId_input"
                    >
                      <span
                        class=""
                      />
                    </label>
                    <input
                      class=""
                      id="sessionFileUploadQuestion3-dummyGuestEventRegId_input"
                      name="file"
                      type="file"
                    />
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
